# line-segment-intersection

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  run.sh  test.sh
apps/: CMakeLists.txt  intersection_of_segments.cpp  main.cpp
apps/include/: utils.hpp
benchmark/: CMakeLists.txt  sweep_line.cpp
data/: bm_linear_grid.csv  bm_log_grid.csv  report.html  report.ipynb
docs/: Doxyfile
docs/html/: annotated.html  class_line_sweep-members.html  class_line_sweep.html  classes.html  comparable__segment_8hpp.html  comparable__segment_8hpp_source.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  event_8hpp.html  event_8hpp_source.html  event__queue_8hpp.html  event__queue_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_type.html  hierarchy.html  index.html  line__segment_8hpp.html  line__segment_8hpp_source.html  line__sweep_8hpp.html  line__sweep_8hpp_source.html  menudata.js  point_8hpp.html  point_8hpp_source.html  rb__tree_8hpp.html  rb__tree_8hpp_source.html  rb__tree_8tpp.html  status_8hpp.html  status_8hpp_source.html  struct_comparable_segment-members.html  struct_comparable_segment.html  struct_d_s_1_1rb__tree_1_1iterator__t-members.html  struct_d_s_1_1rb__tree_1_1iterator__t.html  struct_d_s_1_1rb__tree_1_1node__t-members.html  (+15 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+25 more)
docs/latex/: annotated.tex  class_line_sweep.tex  comparable__segment_8hpp.tex  comparable__segment_8hpp_source.tex  event_8hpp.tex  event_8hpp_source.tex  event__queue_8hpp.tex  event__queue_8hpp_source.tex  files.tex  hierarchy.tex  line__segment_8hpp.tex  line__segment_8hpp_source.tex  line__sweep_8hpp.tex  line__sweep_8hpp_source.tex  point_8hpp.tex  point_8hpp_source.tex  rb__tree_8hpp.tex  rb__tree_8hpp_source.tex  rb__tree_8tpp.tex  refman.tex  status_8hpp.tex  status_8hpp_source.tex  struct_comparable_segment.eps  struct_comparable_segment.tex  struct_d_s_1_1rb__tree_1_1iterator__t.tex  struct_d_s_1_1rb__tree_1_1node__t.tex  struct_d_s_1_1rb__tree_1_1tree__t.tex  struct_event.tex  struct_event_queue.tex  struct_geometry_1_1_line_segment.eps  struct_geometry_1_1_line_segment.tex  struct_geometry_1_1_point.tex  struct_intersection.tex  struct_status.tex
include/ds/: rb_tree.hpp
include/geometry/: line_segment.h  point.h
lib/: CMakeLists.txt
lib/ds/: CMakeLists.txt
lib/geometry/: CMakeLists.txt
lib/include/: comparable_segment.hpp  event.hpp  event_queue.hpp  line_segment.hpp  line_sweep.hpp  point.hpp  rb_tree.hpp  rb_tree.tpp  status.hpp  utils.hpp
lib/src/: event_queue.cpp  line_segment.cpp  line_sweep.cpp
tests/: CMakeLists.txt  event_queue.cpp  line_segment.cpp  point.cpp  random.cpp  rb_tree.cpp  testlib.cpp
utils/: bm_to_csv.py  gen_grid.py  plot_intersections.py
